syntax = "proto3";

package notification;

import "google/protobuf/timestamp.proto";

enum NotificationStatusProtobuf {
    NEW = 0;
    UPDATED = 1;
    DELETED = 2;
}

/*
 * Message always contains 'user_ids', 'id', 'status', 'timestamp'.
 *
 * - when 'status' is NEW it also contains all optional fields
 * - when 'status' is UPDATED it also contains 'seen' optional field
 * - when 'status' is DELETED it does not contain any optional fields
 *
 */
message NotificationProtobuf {

    /*
     * Users that should receive notification
     *
     */
    repeated string user_ids = 1;

    string id = 2;
    NotificationStatusProtobuf status = 3;
    google.protobuf.Timestamp timestamp = 4;
    optional bool seen = 5;
    optional string content_type = 6;
    optional bytes content = 7;
}
